iniziato ad astrarre il richiamo dei metodi tramite router (vanno tutti ancora implementati)
